--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Future</title>
-    <link rel="stylesheet" href="">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/styles.css">
+
+
 </head>
+
+
 <body>
     <img src="/img/logo.svg" alt="logotipas">
     <svg width="153" height="38" viewBox="0 0 153 38" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -16,6 +23,6 @@
     <img src="/img/worker-icon.svg" alt="worker">
     <img src="/img/doublebed-icon.svg" alt="bed">
     <img src="/img/building-icon.svg" alt="building">    
-    <img src="/img/main.svg" alt="main">    
+    <img src="/img/hero.png" alt="hero">    
 </body>
 </html>
