--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </head>
 
 
-<body class="page-index">
+<body class="page-about">
 
     <header class="top-header">
         <a href="#">
@@ -21,8 +21,7 @@
         </a>
  
         <ul class="top-header__navigation">
-            <li><a href="#">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Properties</a></li>
             <li><a href="#">Team</a></li>
