--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p>
                         We successfully cope with tasks of varying complexity, provide long-term guarantees and regularly master new technologies
                     </p>
-                    <a href="#" class="btn-primary">Read more</a>
+                    <a id="read-more-btn" href="#" class="btn-primary">Read more</a>
                 </div>
             </div>
             <picture>
